<resources>
    <string name="app_name">File Remoti</string>
    <string name="ip_addr">Indirizzo IP</string>
    <string name="port">Porta</string>
    <string name="server_info">File Server Info</string>
    <string name="connect">Connetti</string>
    <string name="empty_hint"> </string>
    <string name="actions">Azioni disponibili</string>
    <string name="send_file">Invia File</string>
    <string name="recv_file">Ricevi File</string>
</resources>
